--- a/about-as/index.html
+++ b/about-as/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 
     <title>Kancelaria adwokacko-radcowska</title>
@@ -16,97 +16,119 @@
 
 <body>
     <header>
-        <nav class='navbar bg-light fixed-top'>
-            <a href="../index.html" class='navbar-brand color-class'><img src="../images/logoadwokatura.png" alt="Strona główna"
-                    width='64' height='64' class='d-inline-block mr-3'><img src="../images/KIRP.png" alt="Strona główna"
-                    width='70' height='70' class='d-inline-block mr-3'>Kancelaria Adwokacko-Radcowska</a>
-            <a href="#" class='nav-link color-class'>O nas</a>
-            <a href="../individual-clients/index.html" class='nav-link color-class'>Klienci Indywidualni</a>
-            <a href="../bussines-client/index.html" class='nav-link color-class'>Klienci Biznesowi</a>
-            <!-- <a href="#" class = 'nav-link'>Jednostki samorządu terytorialnego</a>       -->
-            <a href="../contact/index.html" class='nav-link color-class'>Kontakt</a>
+        <nav class='navbar bg-light fixed-top navbar-expand-md'>
+            <div class='flex-nav'>
+                <a href="../index.html" class='navbar-brand navbar-expand-md color-class google-fonts sizer'><img
+                        src="../images/logoadwokatura.png" alt="Strona główna" width='60' height='60'
+                        class='d-md-inline-block d-none mr-3 size'><img src="../images/KIRP.png" alt="Strona główna"
+                        width='70' height='70' class='d-md-inline-block d-none mr-3'>Kancelaria Adwokacko-Radcowska
+                    </br> <span class="location-title">w Białymstoku</span></a>
+                <button class="navbar-toggler nav-margin" type="button" data-toggle="collapse"
+                    data-target="#navmenu"><span class="navbar-toggler-icon"><i class="fa fa-navicon"></i></span>
+                </button>
+            </div>
+            <div id="navmenu" class="collapse navbar-collapse d-md-flex justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item color-class"> <a class="nav-link " href="../about-as/index.html" class='nav-link'
+                            style="color:grey;">O nas</a></li>
+                    <li class="nav-item color-class"> <a class="nav-link color-class"
+                            href="../individual-clients/index.html" class='nav-link color-class'>Klienci Indywidualni</a>
+                    </li>
+                    <li class="nav-item color-class"><a class="nav-link color-class" href="../bussines-client/index.html"
+                            class='nav-link color-class'>Klienci Biznesowi</a> </li>
+                    <li class="nav-item color-class"><a class="nav-link color-class"
+                            href="../government -units/index.html" class='nav-link color-class'>Instytucje</a> </li>
+                    <!-- <a href="#" class = 'nav-link'>Jednostki samorządu terytorialnego</a>   -->
+                    <li class="nav-item"><a class="nav-link" href="../contact/index.html" class='nav-link'
+                            style="color:grey">Kontakt</a></li>
+                </ul>
 
+            </div>
 
         </nav>
         <div id="carouselSlides" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="../images/rawpixel-558597-unsplash.jpg" class="d-block w-100" alt="klienci indywidualni"
-                        width='700' height='600'>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h4 style = color:black;>Odwiedź nas!</h4>
-                        <p style =color:black;>Adres: ul. Legionowa 9/1 lokal 156 Białystok</p>
+                        width='100%' height='700'>
+                    <div class="carousel-caption d-xs-block">
+                        <h4>Potrzebujesz pomocy? Odwiedź nas!</h4>
+                        <p class = "fonts">Adres: ul. Legionowa 9/1 lokal 156 Białystok</p>
                     </div>
                 </div>
-                <!-- <div class="carousel-item">
-                        <img src="./images/slide-img-individ.jpg" class="d-block w-100" alt="klienci indywidualni" width = '700' height='600'>
-                        <div class="carousel-caption d-none d-md-block">
-                              <h5>Historia vitae magistra est</h5>
-                              <p></p>
-                            </div>
-                    </div>
-                    <div class="carousel-item">
-                            <img src="./images/adult-advice-boss-70292.jpg" class="d-block w-100" alt="klienci indywidualni" width = '700' height='600'>
-                            <div class="carousel-caption d-none d-md-block">
-                                  <h5>Historia vitae magistra est</h5>
-                                  <p>Cyceron</p>
-                                </div> -->
             </div>
         </div>
         </div>
     </header>
     <section>
-        <article>
-            <div class ='container-fluid'>
-                <div class = 'row' style="margin-top: 20px;">
-                    <div class = 'col-4'>
-                        <div class = 'box-photo-man' style="float: none; margin: 0 auto;">
-
-                        </div>
-                    </div>
-                    <div class = 'col-6'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, ratione odit consequatur obcaecati voluptatem atque eaque, quas numquam corrupti magni natus eum libero rem non placeat doloremque adipisci eius vitae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt id, vel quia voluptatibus, repellat recusandae necessitatibus tempore totam sunt corporis deleniti distinctio quidem hic optio nisi amet omnis iure expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil qui quae natus odit a. Quis tenetur aspernatur debitis. Perferendis assumenda commodi molestias odit eligendi quisquam quia neque eius optio dolores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut architecto tenetur quasi impedit provident consectetur! Sequi fugiat libero, molestias quia doloribus a magni laboriosam! Blanditiis deserunt aliquam accusantium expedita amet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, cupiditate? Ratione laboriosam nostrum est iusto praesentium saepe similique corrupti amet. Quisquam labore culpa dolorem minus aliquid animi rerum, incidunt ipsa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro perspiciatis excepturi iste repudiandae, fugiat quis! Ut corporis magni nihil velit inventore maiores illo aspernatur, vel sint minus obcaecati odit alias?</div>
-                </div>
-                <div class = 'row' style="margin-top: 20px;">
-                    <div class = 'col-4'>
-                        <div class = 'box-photo-woman' style="float: none; margin: 0 auto;">
-
-                        </div>
-                    </div>
-                    <div class = 'col-6'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, ratione odit consequatur obcaecati voluptatem atque eaque, quas numquam corrupti magni natus eum libero rem non placeat doloremque adipisci eius vitae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt id, vel quia voluptatibus, repellat recusandae necessitatibus tempore totam sunt corporis deleniti distinctio quidem hic optio nisi amet omnis iure expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil qui quae natus odit a. Quis tenetur aspernatur debitis. Perferendis assumenda commodi molestias odit eligendi quisquam quia neque eius optio dolores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut architecto tenetur quasi impedit provident consectetur! Sequi fugiat libero, molestias quia doloribus a magni laboriosam! Blanditiis deserunt aliquam accusantium expedita amet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, cupiditate? Ratione laboriosam nostrum est iusto praesentium saepe similique corrupti amet. Quisquam labore culpa dolorem minus aliquid animi rerum, incidunt ipsa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro perspiciatis excepturi iste repudiandae, fugiat quis! Ut corporis magni nihil velit inventore maiores illo aspernatur, vel sint minus obcaecati odit alias?</div>
-                </div>
-            </div>
-        </article>
+        <div class="container text-edit">
+            <p>
+                <h3>O Nas</h3>
+            </p>
+            <p>Jesteśmy rozwijającą się i prężnie działającą Kancelarią Adwokacko – Radcowską z Białegostoku. </p>
+            <p>Nasza oferta skierowana jest do:
+                <ul class="list-aboutAs">
+                    <li>osób fizycznych nieprowadzących działalności gospodarczej,</li>
+                    <li>przedsiębiorców,</li>
+                    <li>jednostek samorządu terytorialnego i instytucji</li>
+                </ul>
+            </p>
+            <p>W zależności od potrzeb oferujemy kompleksową pomoc prawną w zakresie:
+                <ul class="list-aboutAs">
+                    <li>prowadzenia spraw,</li>
+                    <li>udzielania porad prawnych,</li>
+                    <li>sporządzania pism procesowych i opinii prawnych,</li>
+                    <li>zastępstwa przed sądami i organami administracji publicznej,</li>
+                    <li>opracowywania i opiniowania umów.</li>
+                </ul>
+            </p>
+            <div class = "offert-dropdown">
+                <div class = "flex-box-dropdown"><p class = "dropdown">Oferta</p></div>
+                <p class = "offert">
+                    Oferujemy profesjonalne usługi, w szczególności w zakresie:
+                    <ul class = "listAbout list-aboutAs">
+                    <li>szeroko rozumianego prawa cywilnego w tym m.in. w sprawach o prawa własności, odszkodowania oraz w sprawach spadkowych </br> i podziałach majątku wspólnego,</li>
+                    <li>prawa rodzinnego w tym min. w sprawach rozwodowych, alimentacyjnych, opiekuńczych,</li>
+                    <li>prawa kanonicznego,</li>
+                    <li>prawa karnego i wykroczeń,</li>
+                    <li>prawa pracy i ubezpieczeń społecznych (zarówno od strony pracodawcy, jak i od strony pracownika),</li>
+                    <li>prawa handlowego i gospodarczego,</li>
+                    <li>prawa administracyjnego oraz samorządowego,</li>
+                    <li>ochrony konkurencji i konsumenta.</li></ul>
+            </p>
+        </div>
+        </div>
     </section>
     <footer>
-        <div class='container-fluid box-sizer'>
+        <div class='container-fluid box-sizer sizer-aboutAs'>
             <div class="container">
                 <div class="row">
                     <div class="col-sm first-box-character">
-                        <h5>Radca Prawny-adwokat kościelny</h5>
+                        <h6>Radca prawny-Adwokat kościelny</h6>
                         <p>Łukasz Prokorym <br>
-                            email: cos@malpa.com <br>
-                            tel: 78888888
+                            Tel. 661-079-589 <br>
+                            E-mail. prokorymlukasz@gazeta.pl
                         </p>
                     </div>
                     <div class="col-sm second-box-character">
-                        <h5>Adwokat</h5>
-                        <p>Wiktoria brzydkopiszesz-prokorym<br>
-                            email: cos@malpa.com <br>
-                            tel: 78888888
+                        <h6>Adwokat</h6>
+                        <p>Wiktoria Danilewicz – Prokorym<br>
+                            Tel. 600-253-106 <br>
+                            E-mail. wiktoria.prokorym@o2.pl
                         </p>
                     </div>
                     <div class="col-sm third-box-character">
-                        <h5>Adwokat</h5>
-                        <p>Anna Walicka-brzydkopiszesz<br>
-                            email: cos@malpa.com <br>
-                            tel: 78888888
+                        <h6>Adwokat</h6>
+                        <p>Anna Walicka – Bycul<br>
+                            Tel. 519-170-786 <br>
+                            E-mail -
                         </p>
                     </div>
                     <div class="col-sm four-box-character">
-                        <h5>Adwokat</h5>
+                        <h6>Adwokat</h6>
                         <p>Milena Narożna<br>
-                            email: cos@malpa.com <br>
-                            tel: 78888888
+                            Tel. 886-133-131 <br>
+                            E-mail. adw.narozna@o2.pl
                         </p>
                     </div>
                 </div>
@@ -123,12 +145,16 @@
     <!-- <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
     <!-- <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
 </body>
-<script src="./js/app.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="../js/app.js"></script>
 
 </html>
