--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 <body>
     <header>
         <nav class='navbar bg-light fixed-top navbar-expand-md'>
+            <div class = 'flex-nav'>
             <a href="./index.html" class='navbar-brand navbar-expand-md color-class google-fonts sizer'><img src="./images/logoadwokatura.png" alt="Strona główna"
                     width='60' height='60' class='d-md-inline-block d-none mr-3 size'><img src="./images/KIRP.png" alt="Strona główna"
-                    width='70' height='70' class='d-md-inline-block d-none mr-3'>Kancelaria Adwokacko-Radcowska</a>
+                    width='70' height='70' class='d-md-inline-block d-none mr-3'>Kancelaria Adwokacko-Radcowska </br> <span class = "location-title">w Białymstoku</span></a>
                     <button class ="navbar-toggler nav-margin" type = "button" data-toggle ="collapse" data-target = "#navmenu"><span class ="navbar-toggler-icon"><i class="fa fa-navicon"></i></span>
                     </button>
+                </div>
                     <div id="navmenu" class ="collapse navbar-collapse d-md-flex justify-content-end">
                         <ul class ="navbar-nav">
                                <li class="nav-item color-class"> <a class="nav-link " href="./about-as/index.html" class='nav-link'style="color:grey;">O nas</a></li>
@@ -45,19 +47,6 @@
                         <p>Adres: ul. Legionowa 9/1 lokal 156 Białystok</p>
                     </div>
                 </div>
-                <!-- <div class="carousel-item">
-                        <img src="./images/slide-img-individ.jpg" class="d-block w-100" alt="klienci indywidualni" width = '700' height='600'>
-                        <div class="carousel-caption d-none d-md-block">
-                              <h5>Historia vitae magistra est</h5>
-                              <p></p>
-                            </div>
-                    </div>
-                    <div class="carousel-item">
-                            <img src="./images/adult-advice-boss-70292.jpg" class="d-block w-100" alt="klienci indywidualni" width = '700' height='600'>
-                            <div class="carousel-caption d-none d-md-block">
-                                  <h5>Historia vitae magistra est</h5>
-                                  <p>Cyceron</p>
-                                </div> -->
             </div>
         </div>
         </div>
