--- a/bussines-client/index.html
+++ b/bussines-client/index.html
@@ -16,9 +16,9 @@
 
 <body>
         <header>
-                <nav class='navbar bg-light fixed-top navbar-expand-md'>
+                <nav class='navbar bg-light fixed-top navbar-expand-lg'>
                     <div class='flex-nav'>
-                        <a href="../index.html" class='navbar-brand navbar-expand-md color-class google-fonts sizer'><img
+                        <a href="../index.html" class='navbar-brand navbar-expand-lg color-class google-fonts sizer'><img
                                 src="../images/logoadwokatura.png" alt="Strona główna" width='60' height='60'
                                 class='d-md-inline-block d-none mr-3 size'><img src="../images/KIRP.png" alt="Strona główna"
                                 width='70' height='70' class='d-md-inline-block d-none mr-3'>Kancelaria Adwokacko-Radcowska
@@ -27,7 +27,7 @@
                             data-target="#navmenu"><span class="navbar-toggler-icon"><i class="fa fa-navicon"></i></span>
                         </button>
                     </div>
-                    <div id="navmenu" class="collapse navbar-collapse d-md-flex justify-content-end">
+                    <div id="navmenu" class="collapse navbar-collapse d-lg-flex justify-content-end">
                         <ul class="navbar-nav">
                             <li class="nav-item color-class"> <a class="nav-link " href="../about-as/index.html" class='nav-link'
                                     style="color:grey;">O nas</a></li>
@@ -51,7 +51,7 @@
                         <div class="carousel-item active bussines">
                             <img src="../images/adult-advice-boss-70292.jpg" class="d-block w-100" alt="klienci indywidualni"
                                 width='100%' height='700'>
-                            <div class="carousel-caption d-xs-block">
+                            <div class="carousel-caption d-xs-block" style = "bottom: -15px;">
                                 <h4 style = "color: #F8F8FF;">Potrzebujesz pomocy? Odwiedź nas!</h4>
                                 <p class = "fonts" style = "color: #F8F8FF;">Adres: ul. Legionowa 9/1 lokal 156 Białystok</p>
                             </div>
@@ -88,7 +88,7 @@
             <footer>
                 <div class='container-fluid box-sizer sizer-aboutAs'>
                     <div class="container">
-                        <div class="row">
+                        <div class="row center">
                             <div class="col-sm first-box-character">
                                 <h6>Radca prawny-Adwokat kościelny</h6>
                                 <p>Łukasz Prokorym <br>
@@ -107,7 +107,7 @@
                                 <h6>Adwokat</h6>
                                 <p>Anna Walicka – Bycul<br>
                                     Tel. 519-170-786 <br>
-                                    E-mail -
+                                    E-mail. annawalicka89@gmail.com
                                 </p>
                             </div>
                             <div class="col-sm four-box-character">
