--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 <body>
     <header>
-        <nav class='navbar bg-light fixed-top navbar-expand-md'>
+        <nav class='navbar bg-light fixed-top navbar-expand-lg'>
             <div class = 'flex-nav'>
-            <a href="./index.html" class='navbar-brand navbar-expand-md color-class google-fonts sizer'><img src="./images/logoadwokatura.png" alt="Strona główna"
+            <a href="./index.html" class='navbar-brand navbar-expand-lg color-class google-fonts sizer'><img src="./images/logoadwokatura.png" alt="Strona główna"
                     width='60' height='60' class='d-md-inline-block d-none mr-3 size'><img src="./images/KIRP.png" alt="Strona główna"
                     width='70' height='70' class='d-md-inline-block d-none mr-3'>Kancelaria Adwokacko-Radcowska </br> <span class = "location-title">w Białymstoku</span></a>
                     <button class ="navbar-toggler nav-margin" type = "button" data-toggle ="collapse" data-target = "#navmenu"><span class ="navbar-toggler-icon"><i class="fa fa-navicon"></i></span>
                     </button>
                 </div>
-                    <div id="navmenu" class ="collapse navbar-collapse d-md-flex justify-content-end">
+                    <div id="navmenu" class ="collapse navbar-collapse d-lg-flex justify-content-end">
                         <ul class ="navbar-nav">
                                <li class="nav-item color-class"> <a class="nav-link " href="./about-as/index.html" class='nav-link'style="color:grey;">O nas</a></li>
                                <li class="nav-item color-class"> <a class="nav-link color-class" href="./individual-clients/index.html" class='nav-link color-class'>Klienci Indywidualni</a> </li>
@@ -53,7 +53,7 @@
     </header>
     <section>
         <article>
-            <div class="container">
+            <div class="container mid-screen">
                 <div class="row">
                     <div class="col-sm small-box first">
                         <h3>O nas</h3>
@@ -101,7 +101,7 @@
     <footer>
         <div class='container-fluid box-sizer'>
             <div class="container">
-                <div class="row">
+                <div class="row center">
                     <div class="col-sm first-box-character">
                         <h6>Radca prawny-Adwokat kościelny</h6>
                         <p>Łukasz Prokorym <br>
@@ -120,7 +120,7 @@
                         <h6>Adwokat</h6>
                         <p>Anna Walicka – Bycul<br>
                             Tel. 519-170-786 <br>
-                            E-mail -
+                            E-mail. annawalicka89@gmail.com
                         </p>
                     </div>
                     <div class="col-sm four-box-character">
